kubernetes/kafka-consumer-deplyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer-service
  template:
    metadata:
      labels:
        app: kafka-consumer-service
    spec:
      containers:
        - name: kafka-consumer-service
          image: annayaniv/kafka-consumer:1.0
          ports:
            - containerPort: 8080
              name: http
