kubernetes/keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: keycloak/keycloak:21.1
          args: [ "start-dev", "--import-realm" ]
          volumeMounts:
            - name: realm
              mountPath: /opt/keycloak/data/import/
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 10
      volumes:
        - name: realm
          configMap:
            name: keycloak-realm
