kubernetes/hotel-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  selector:
    app: hotel-service
  ports:
    - port: 8080
      name: http
      targetPort: 8080
