kubernetes/kafka-consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer-service
spec:
  selector:
    app: kafka-consumer-service
  ports:
    - port: 8080
      name: http
      targetPort: 8080
