kubernetes/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper-service
  clusterIP: "None"
  ports:
    - port: 2181
      name: http
      targetPort: 2181
