kubernetes/hotel-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-ingress
spec:
  rules:
    - host: hotel-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotel-service
                port:
                  number: 8080
